Fixed alignment on lists

--- a/public_html/assets/sass/_body.scss
+++ b/public_html/assets/sass/_body.scss
@@ -267,19 +267,9 @@ h1 a:hover, .h1 a:hover, h2 a:hover, .h2 a:hover, h3 a:hover, .h3 a:hover, h4 a:
   max-width: 90%;
 }
 
-.forms {
-  list-style-type: none;
-  h4 {
-    font-size: 1em;
-  }
-  @media screen and (min-width: 600px) {
-    columns: 2;
-    column-gap: 30px;
-  }
-  a {
-    margin-bottom: 1.75em;
-    display: inline-block;
-  }
+.program-list--forms {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 //------small screen desygn
