--- a/public_html/assets/sass/_programs.scss
+++ b/public_html/assets/sass/_programs.scss
@@ -39,6 +39,13 @@
   }
 }
 
+.list-marked li {
+  margin-top: 0 !important;
+  margin-bottom: 15px;
+  display: inline-block;
+  width: 100%;
+}
+
 .faculty-listing h4 {
   margin-bottom: 1em;
 }
